--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ rvm:
   - 2.1.1
   - 2.1.0
 
+before_install:
+  - gem install bundler
+  - rm -f .git/index.lock
+
 script: "bundle exec rspec spec"
 
 notifications:
